Fixing overflow on lightbox.

--- a/app/components/App/index.styl
+++ b/app/components/App/index.styl
@@ -1,3 +1,7 @@
+.app
+  width 100%
+  overflow-x hidden
+
 .container
   display block
   position relative
